--- a/src/app/privado/adicional/adicional.component.html
+++ b/src/app/privado/adicional/adicional.component.html
@@ -1,85 +1,93 @@
 <br>
 <br>
 <br>
+<br>
 <div class="container">
-	<h3 class="display-4">Adicionales</h3>
+	<h2>Adicionales
+		<small>({{adds.length}})</small>
+	</h2>
 	<hr class="my-2">
 </div>
 <div class="container">
 	<div class="row">
 		<div class="col-lg-9 col-md-10 col-sm-12">
-			<h3>
-				Registros({{adds.length}})
-				<button type="button" class="btn btn-danger rounded-circle border-0 pull-right" (click)="setNuevo()" data-toggle="modal"
-				 data-target="#adicionalModal">
-					<i class="fa fa-plus" aria-hidden="true"></i>
-				</button>
-			</h3>
-			<div class="d-flex flex-row-reverse">
-				<div class="p-2">
+			<div class="row mb-1">
+				<div class="col-sm-4">
 					<div class="input-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text">
-								<i class="fa fa-filter" aria-hidden="true"></i>
+								<i class="fa fa-search" aria-hidden="true"></i>
 							</span>
 						</div>
-						<input type="text" name="filtro" class="form-control" placeholder="Filtro" [(ngModel)]="filtro" />
+						<input type="text" name="filtro" class="form-control" placeholder="Buscar" [(ngModel)]="filtro" />
 					</div>
 				</div>
+				<div class="col-sm-8">
+					<button type="button" class="btn btn-primary add pull-right" (click)="setNuevo()" data-toggle="modal" data-target="#adicionalModal">
+						<i class="fa fa-plus" aria-hidden="true"></i>
+						Nuevo
+					</button>
+				</div>
 			</div>
-			<table class="table table-striped">
-				<thead>
-					<tr>
-						<th width="60%">Adicional</th>
-						<th width="30%">Tarifa</th>
-						<th width="10%">Editar/Eliminar</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr *ngFor="let add of adds | filtrar:'adicional,tarifa':filtro">
-						<td width="60%">{{add.adicional}}</td>
-						<td width="30%">{{add.tarifa | currency:'USD':true}}</td>
-						<td width="10%" class="text-center">
-							<div class="btn-group grid-btn" role="group">
-								<button type="button" (click)="setModi(add)" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#adicionalModal">
-									<i class="fa fa-pencil" aria-hidden="true"></i>
-								</button>
-								<button type="button" (click)="setElim(add)" class="btn btn-sm btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
-									<i class="fa fa-trash" aria-hidden="true"></i>
-								</button>
-							</div>
-						</td>
-					</tr>
-					<tr *ngIf="loading_adi">
-						<td colspan="3">
-							<app-spinner></app-spinner>
-						</td>
-					</tr>
-					<tr *ngIf="!loading_adi && adds.length===0">
-						<td class="text-center" colspan="3">
-							<p class="text-muted">No existen adicionales</p>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div><div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
-		
+			<div class="card">
+				<div class="card-body">
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th width="60%">Adicional</th>
+								<th width="30%">Tarifa</th>
+								<th width="10%">Editar/Eliminar</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr *ngFor="let add of adds | filtrar:'adicional,tarifa':filtro">
+								<td width="60%">{{add.adicional}}</td>
+								<td width="30%">{{add.tarifa | currency:'USD'}}</td>
+								<td width="10%" class="text-center">
+									<div class="btn-group grid-btn" role="group">
+										<button type="button" (click)="setModi(add)" class="btn btn-link text-primary" data-toggle="modal" data-target="#adicionalModal">
+											<i class="fa fa-pencil" aria-hidden="true"></i>
+										</button>
+										<button type="button" (click)="setDelete(add)" class="btn btn-link text-danger" data-toggle="modal" data-target="#confirmaModal">
+											<i class="fa fa-trash" aria-hidden="true"></i>
+										</button>
+									</div>
+								</td>
+							</tr>
+							<tr *ngIf="loadingAdicional">
+								<td colspan="3">
+									<app-spinner></app-spinner>
+								</td>
+							</tr>
+							<tr *ngIf="!loadingAdicional && adds.length===0">
+								<td class="text-center" colspan="3">
+									<p class="text-muted">No existen adicionales</p>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
+
 			<div class="card mt-2">
 				<div class="card-body">
 					<h4 class="card-title">Ayuda</h4>
 					<p class="card-text">
-						Registra, edita o elimina los servicios adicionales que manejas en tu hospedaje. Los adicionales se pueden registrar al momento de hacer una reserva y/o mientras no se haya hecho el proceso de check-out.
+						Registra, edita o elimina los servicios adicionales que manejas en tu hospedaje. Los adicionales se pueden registrar al momento
+						de hacer una reserva y/o mientras no se haya hecho el proceso de check-out.
 					</p>
 					<!-- <ul>
 						<li *ngFor="let op of tipos">{{op.tipotarifa}}</li>
 					</ul> -->
 				</div>
 			</div>
-		
+
 			<div class="mt-2">
 				<app-card-notificaciones></app-card-notificaciones>
 			</div>
-		
+
 		</div>
 	</div>
 </div>
@@ -87,33 +95,39 @@
 <div *ngIf="model" class="modal fade" id="adicionalModal">
 	<div class="modal-dialog modal-md" role="document">
 		<div class="modal-content">
-			<div class="modal-header">
+			<div class="modal-header bg-primary text-light">
 				<h5 class="modal-title">Adicional</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
-			<form name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }"
-			 novalidate>
-				<div class="form-group">
-					<label for="adicional">Nombre</label>
-					<input type="text" class="form-control col-md-8" name="adicional" [(ngModel)]="model.adicional" #adicional="ngModel" maxlength="100"
-					 required />
-					<div *ngIf="f.submitted && !adicional.valid" class="invalid-feedback">El nombre del servicio adicional es requerido</div>
-				</div>
-				<div class="form-group">
-					<label for="tarifa">Tarifa</label>
-					<input type="text" class="form-control col-md-4" name="tarifa" [(ngModel)]="model.tarifa" #adicional="ngModel" appMoneda="true"
-					 required />
-					<div *ngIf="f.submitted && !adicional.valid" class="invalid-feedback">La tarifa es requerida</div>
-				</div>
-				<div class="modal-footer">
-					<img *ngIf="loading" src="/assets/images/loading.svg" />
-					<button *ngIf="!loading" type="submit" class="btn btn-primary">Guardar
-					</button>
-					<button *ngIf="!loading" type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-				</div>
-			</form>
+			<div class="modal-body">
+				<form id="formAdicional" name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }"
+				 novalidate>
+					<div class="form-row">
+						<div class="form-group col-sm-12 col-md-8">
+							<label for="adicional">Nombre</label>
+							<input type="text" class="form-control" name="adicional" [(ngModel)]="model.adicional" #adicional="ngModel" maxlength="100"
+							 required />
+							<div *ngIf="f.submitted && !adicional.valid" class="invalid-feedback">El nombre del servicio adicional es requerido</div>
+						</div>
+						<div class="form-group col-sm-12 col-md-4">
+							<label for="tarifa">Tarifa</label>
+							<input type="text" class="form-control" name="tarifa" [(ngModel)]="model.tarifa" #adicional="ngModel" appMoneda="true"
+							 required />
+							<div *ngIf="f.submitted && !adicional.valid" class="invalid-feedback">La tarifa es requerida</div>
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<img *ngIf="loading" src="/assets/images/loading.svg" />
+				<button *ngIf="!loading" type="submit" class="btn btn-primary" form="formAdicional">Guardar
+				</button>
+				<button *ngIf="!loading" type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
+			</div>
 		</div>
 	</div>
 </div>
+
+<app-modal-confirmacion [mensaje]="mensajeConfirmacion" (confirmar)="delete()" (cancelar)="onCancelar()"></app-modal-confirmacion>
