--- a/src/app/privado/hospedaje/hospedaje.component.html
+++ b/src/app/privado/hospedaje/hospedaje.component.html
@@ -89,7 +89,7 @@
                     <div class="form-group" *ngIf="!readOnly">
                         <img *ngIf="loading" src="/assets/images/loading.svg" />
                         <button *ngIf="!loading" class="btn btn-primary">Guardar</button>
-                        <a *ngIf="!loading" href="javascript:;" (click)="setCancela()" class="btn btn-link">Cancelar</a>
+                        <a *ngIf="!loading" href="javascript:;" (click)="setCancela()" class="btn btn-light mx-1">Cancelar</a>
                     </div>
                 </form>
             </div>
