--- a/src/app/compartido/components/modal-confirmacion/modal-confirmacion.component.html
+++ b/src/app/compartido/components/modal-confirmacion/modal-confirmacion.component.html
@@ -1,18 +1,18 @@
-<div *ngIf="message" class="modal fade" id="confirmModal" style="top: 80px;">
+<div class="modal fade" data-backdrop="static" data-keyboard="false" id="confirmaModal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title error">Mensaje de confirmación</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" aria-label="Close" (click)="_cancelar()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <p>{{message.text}}</p>
+        <p>{{mensaje}}</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="selectedVal('aceptar')">Aceptar</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="selectedVal('cancelar')">Cancelar</button>
+        <button type="button" class="btn btn-outline-danger" (click)="_confirmar()">Aceptar</button>
+        <button type="button" class="btn btn-ligth" (click)="_cancelar()">Cancelar</button>
       </div>
     </div>
   </div>
