--- a/src/app/privado/components/card-reserva/card-reserva.component.css
+++ b/src/app/privado/components/card-reserva/card-reserva.component.css
@@ -11,9 +11,39 @@
     margin-left: 8px;
     margin-right: 8px;
     float: left;
+    transition: all 1 ease;
+    display: none;
+}
+
+.medium {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    font-weight: 400;
+    padding: 5px;
+    border-radius: 2px;
+    letter-spacing: 1px;
+    line-height: 1;
+}
+
+.medium p {
+    margin: 5px;
 }
 
 .dashboard-arrival-date {
     border-bottom: 1px solid #666;
     margin-bottom: 10px;
+}
+
+
+@media (min-width: 768px) {
+    .reservation-dates {
+        display: unset;
+        transition: all 1s ease;
+    }
+
+    .medium {
+        display: none;
+        transition: all 1s ease;
+    }
 }
