--- a/src/app/privado/tarifa/tarifa.component.html
+++ b/src/app/privado/tarifa/tarifa.component.html
@@ -1,69 +1,75 @@
 <br>
 <br>
 <br>
+<br>
 <div class="container">
-  <h3 class="display-4">Tarifas</h3>
+  <h2>Tarifas
+    <small>({{tarifas.length}})</small>
+  </h2>
   <hr class="my-2">
 </div>
 <div class="container">
   <div class="row">
     <div class="col-lg-9 col-md-10 col-sm-12">
-      <h3>
-        Registros({{tarifas.length}})
-        <button type="button" class="btn btn-danger rounded-circle border-0 pull-right" (click)="setNuevo()" data-toggle="modal"
-          data-target="#tarifaModal">
-          <i class="fa fa-plus" aria-hidden="true"></i>
-        </button>
-      </h3>
-      <div class="d-flex flex-row-reverse">
-        <div class="p-2">
+      <div class="row mb-1">
+        <div class="col-sm-4">
           <div class="input-group">
             <div class="input-group-prepend">
               <span class="input-group-text">
-                <i class="fa fa-filter" aria-hidden="true"></i>
+                <i class="fa fa-search" aria-hidden="true"></i>
               </span>
             </div>
-            <input type="text" name="filtro" class="form-control" placeholder="Filtro" [(ngModel)]="filtro" />
+            <input type="text" name="filtro" class="form-control" placeholder="Buscar" [(ngModel)]="filtro" />
           </div>
         </div>
+        <div class="col-sm-8">
+          <button type="button" class="btn btn-primary add pull-right" (click)="setNuevo()" data-toggle="modal" data-target="#tarifaModal">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+            Nuevo
+          </button>
+        </div>
       </div>
-      <table class="table table-striped table-responsive">
-        <thead>
-          <tr>
-            <th width="20%">Tipo</th>
-            <th width="40%">Tarifa</th>
-            <th width="30%">Valor</th>
-            <th width="10%">Editar/Eliminar</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let tarifa of tarifas | filtrar:'tipotarifa,tarifa,valor':filtro">
-            <td width="20%">{{tarifa.tipotarifa}}</td>
-            <td width="40%">{{tarifa.tarifa}}</td>
-            <td width="30%">{{tarifa.valor | currency:'USD':true}}</td>
-            <td width="10%" class="text-center">
-              <div class="btn-group grid-btn" role="group">
-                <button type="button" (click)="setModi(tarifa)" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#tarifaModal">
-                  <i class="fa fa-pencil" aria-hidden="true"></i>
-                </button>
-                <button type="button" (click)="setElim(tarifa)" class="btn btn-sm btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
-                  <i class="fa fa-trash" aria-hidden="true"></i>
-                </button>
-              </div>
-            </td>
-          </tr>
-					<tr *ngIf="loading_tar">
-						<td colspan="4">
-							<app-spinner></app-spinner>
-						</td>
-					</tr>
-					<tr *ngIf="!loading_tar && tarifas.length===0">
-						<td class="text-center" colspan="4">
-							<p class="text-muted">No existen tarifas registradas</p>
-						</td>
-					</tr>
-        </tbody>
-      </table>
+      <div class="card">
+        <div class="card-body">
+          <table class="table table-striped table-responsive">
+            <thead>
+              <tr>
+                <th width="20%">Tipo</th>
+                <th width="40%">Tarifa</th>
+                <th width="30%">Valor</th>
+                <th width="10%">Editar/Eliminar</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let tarifa of tarifas | filtrar:'tipoTarifa,tarifa,valor':filtro">
+                <td width="20%">{{tarifa.tipoTarifa}}</td>
+                <td width="40%">{{tarifa.tarifa}}</td>
+                <td width="30%">{{tarifa.valor | currency:'USD'}}</td>
+                <td width="10%" class="text-center">
+                  <div class="btn-group grid-btn" role="group">
+                    <button type="button" (click)="setModi(tarifa)" class="btn btn-link text-primary" data-toggle="modal" data-target="#tarifaModal">
+                      <i class="fa fa-pencil" aria-hidden="true"></i>
+                    </button>
+                    <button type="button" (click)="setDelete(tarifa)" class="btn btn-link text-danger" data-toggle="modal" data-target="#confirmaModal">
+                      <i class="fa fa-trash" aria-hidden="true"></i>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+              <tr *ngIf="loading_tar">
+                <td colspan="4">
+                  <app-spinner></app-spinner>
+                </td>
+              </tr>
+              <tr *ngIf="!loading_tar && tarifas.length===0">
+                <td class="text-center" colspan="4">
+                  <p class="text-muted">No existen tarifas registradas</p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
     <div class="col-lg-3 col-md-2 col-sm-12" id="sidebar">
 
@@ -71,10 +77,10 @@
         <div class="card-body">
           <h4 class="card-title">Ayuda</h4>
           <p class="card-text">
-            Registra, edita o elimina las tarifas que manejas en tu hospedaje. Las tarifas se asignan a las habitaciones al memomento de hacer una reserva y suman a la cuenta final dependiendo los días que se ocupe la habitación.
+            Registra, edita o elimina las tarifas que manejas en tu hospedaje. Las tarifas se asignan a las habitaciones al memomento
+            de hacer una reserva y suman a la cuenta final dependiendo los días que se ocupe la habitación.
             <br>
-            <br>
-            Entre los tipos de tarifas que puedes registrar estan:
+            <br> Entre los tipos de tarifas que puedes registrar estan:
           </p>
           <ul>
             <li *ngFor="let op of tipos">{{op.tipotarifa}}</li>
@@ -94,40 +100,46 @@
 <div *ngIf="model" class="modal fade" id="tarifaModal">
   <div class="modal-dialog modal-md" role="document">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header bg-primary text-light">
         <h5 class="modal-title">Tarifa</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }"
-        novalidate>
-        <div class="form-group">
-          <label for="tipo">Tipo</label>
-          <select class="form-control col-md-6" name="tipo" [(ngModel)]="model.idtipo" #tipo="ngModel" required>
-            <option *ngFor="let op of tipos" [value]="op.idtipo">{{op.tipotarifa}}</option>
-          </select>
-          <div *ngIf="f.submitted && !tipo.valid" class="invalid-feedback">El tipo de tarifa es requerido</div>
-        </div>
-        <div class="form-group">
-          <label for="tarifa">Tarifa</label>
-          <input type="text" class="form-control col-md-6" name="tarifa" [(ngModel)]="model.tarifa" #tarifa="ngModel" maxlength="100"
-            required />
-          <div *ngIf="f.submitted && !tarifa.valid" class="invalid-feedback">El nombre de la tarifa es requrida</div>
-        </div>
-        <div class="form-group">
-          <label for="valor">Valor</label>
-          <input type="text" class="form-control col-md-4" name="valor" [(ngModel)]="model.valor" #valor="ngModel" appMoneda="true"
-            required />
-          <div *ngIf="f.submitted && !valor.valid" class="invalid-feedback">El valor de la tarifa es requerido</div>
-        </div>
-        <div class="modal-footer">
-          <img *ngIf="loading" src="/assets/images/loading.svg" />
-          <button *ngIf="!loading" type="submit" class="btn btn-primary">Guardar
-          </button>
-          <button *ngIf="!loading" type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        </div>
-      </form>
+      <div class="modal-body">
+        <form id="formTarifa" name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }"
+          novalidate>
+          <div class="form-row">
+            <div class="form-group col-sm-12 col-md-4">
+              <label for="tipo">Tipo</label>
+              <select class="form-control" name="tipo" [(ngModel)]="model.idTipo" #tipo="ngModel" required>
+                <option *ngFor="let op of tipos" [value]="op.idTipo">{{op.tipoTarifa}}</option>
+              </select>
+              <div *ngIf="f.submitted && !tipo.valid" class="invalid-feedback">El tipo de tarifa es requerido</div>
+            </div>
+            <div class="form-group col-sm-12 col-md-6">
+              <label for="tarifa">Tarifa</label>
+              <input type="text" class="form-control" name="tarifa" [(ngModel)]="model.tarifa" #tarifa="ngModel" maxlength="100" required
+              />
+              <div *ngIf="f.submitted && !tarifa.valid" class="invalid-feedback">El nombre de la tarifa es requrida</div>
+            </div>
+            <div class="form-group col-sm-12 col-md-2">
+              <label for="valor">Valor</label>
+              <input type="text" class="form-control" name="valor" [(ngModel)]="model.valor" #valor="ngModel" appMoneda="true" required
+              />
+              <div *ngIf="f.submitted && !valor.valid" class="invalid-feedback">El valor de la tarifa es requerido</div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <img *ngIf="loading" src="/assets/images/loading.svg" />
+        <button *ngIf="!loading" type="submit" class="btn btn-primary" form="formTarifa">Guardar
+        </button>
+        <button *ngIf="!loading" type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
+      </div>
     </div>
   </div>
 </div>
+
+<app-modal-confirmacion [mensaje]="mensajeConfirmacion" (confirmar)="delete()" (cancelar)="onCancelar()"></app-modal-confirmacion>
