--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,34 @@
-@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+/* @import "../node_modules/bootstrap/dist/css/bootstrap.min.css"; */
 @import "../node_modules/font-awesome/css/font-awesome.css";
 @import "../node_modules/toastr/build/toastr.min.css";
 @import "../node_modules/select2/dist/css/select2.min.css";
-/* @import "./app/css/estilos.css"; */
+@import url('https://fonts.googleapis.com/css?family=Hind');
 
-html {
+@font-face {
+    font-family: 'century-gothic'; /*a name to be used later*/
+    src: url('/assets/fonts/Century-Gothic.ttf'); /*URL to font*/
+}
+
+html {  
   font-size: 15px;
 }
 
-body{
+body{  
   background: #fafafa;
+  font-family: 'Hind', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'century-gothic';
+}
+
+.table td, .table th {
+    padding: .3rem;
+}
+
+.btn.add {
+    padding: .4rem .9rem;
+    border-radius: 2rem;
 }
 
 .modal-open .modal {
@@ -17,10 +36,10 @@ body{
   overflow-y: auto;
 }
 
-.modal-header {
+/* .modal-header {
   background: rgba(0, 34, 51, 0.88);
   color: white;
-}
+} */
 
 .btn-icon {
   font-size: 1.4rem;
@@ -77,4 +96,8 @@ button.close {
 .bg-negro{
   background: #363b3e!important;
   color: #ececec;
+}
+
+.tach {
+    text-decoration: line-through;
 }
